# zoocarp

./: Cargo.toml  TODO.md  migrations.toml
src/: bucket.rs  lib.rs  lot.rs  main.rs  sync_lots.rs  trade_update_client.rs  update_server.rs
tests/: sync_test.rs
tests/fixtures/: update_fill.json
