[package]
name = "zoocarp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
apca = { path = "../apca", version = "0.25.1" }
axum = "0.5.16"
axum-macros = "0.2.3"
chrono = "0.4.22"
dotenvy = "0.15.5"
futures = "0.3.24"
http-endpoint = "0.5.0"
num-decimal = {version = "0.2.4", default-features = false, features = ["num-v04", "serde"]}
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
strum = { version = "0.24.1", features = ["strum_macros", "derive"] }
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.4", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
turbosql = "0.7.0"
uuid = { version = "1.2.1", features = ["v8", "v4"] }
